<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Nombre"
        android:textColor="@color/md_light_blue_900"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo"
        app:srcCompat="@drawable/resistencia"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="180dp"
        android:layout_height="202dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/Banda1_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/Banda1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Banda2_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/Banda2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Banda3_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/Tolerancia"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/Porcentaje"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="181dp"
        android:layout_height="199dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/banda1_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:entries="@array/banda1_color"
            android:gravity="center"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/banda2_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/banda2_color"
            android:gravity="center"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/banda3_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/banda3_color"
            android:gravity="center"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/porcentaje_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Tolerancia_error"
            android:gravity="center"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/boton_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Calcular"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/resultado_textview"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/md_light_blue_900"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_calcular" />


</androidx.constraintlayout.widget.ConstraintLayout>